<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniGame</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_usar_db">Gestionar Preguntas</string>
    <string name="title_activity_crear_db">Crear DB</string>
    <string name="title_activity_bajar_db">Bajar DB</string>
    <string name="title_activity_modo_individual">Modo Individual</string>
    <string name="title_activity_lista_preguntas">Lista Preguntas</string>
    <string name="title_activity_editar_pregunta">Editar Pregunta</string>
    <string name="title_activity_universidades">Universidades</string>
    <string name="title_activity_carreras">Carreras</string>
    <string name="title_activity_asignaturas">Asignaturas</string>
    <string name="title_activity_dbs">Bases de Datos</string>
    <string name="title_activity_juego_individual">Individual</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="title_activity_cargar">Cargando...</string>
    <string name="txt_comodines">Comodines disponibles:</string>

    <string name="title_activity_estadisticas_partida">Resultado</string>
    <string name="end">Terminar partida</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="individual_mode">Modo Individual</string>
    <string name="tournament_mode">Modo Torneo</string>
    <string name="download_questions">Bajar Preguntas</string>
    <string name="use_questions">Gestionar Preguntas</string>
    <string name="etxt_university">Universidad</string>
    <string name="etxt_carrer">Carrera</string>
    <string name="etxt_subject">Asignatura</string>
    <string name="etxt_name_db">Nombre DB</string>
    <string name="etxt_tags_preguntas">Tags preguntas</string>
    <string name="btn_create">Crear</string>
    <string name="btn_browse">Buscar</string>
    <string name="txt_individual_mode">Selecciona Preguntas</string>
    <string name="btn_add_question">Añadir pregunta</string>
    <string name="btn_confirmar_respuesta">Confirmar</string>
    <string name="txt_universities">Universidades</string>
    <string name="txt_juego_individual"></string>
    <string name="txt_carrer">Carrera</string>
    <string name="txt_subject">Asignatura</string>
    <string name="txt_dbs">Bases de Datos</string>
    <string name="txt_tiempo_nombre">Tiempo:</string>
    
    <!-- String LoginDialog -->
    <string name="hint_id_login">Nombre de usuario</string>
    <string name="hint_id_password">Contraseña</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_login">Inicia sesión</string>

    <string name="title_activity_registry">¡Regístrate!</string>
    <string name="hint_id_nombre">Nombre</string>
    <string name="hint_id_apellidos">Apellidos</string>

    <string name="btn_registry">Regístrate</string>

    <string name="txtRegistro">Si no tienes cuenta de usuario...</string>

    <string name="title_registry">Formulario de registro de usuario</string>


    <string-array name="sexo">
        <item>Mujer</item>
        <item>Hombre</item>
    </string-array>


</resources>
