<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_registry">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:text="@string/title_activity_registry"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="@color/black_overlay"
        android:background="@drawable/login_design"/>
    <EditText
        android:id="@+id/username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_id_login" />
    <EditText
        android:theme="@style/Widget.AppCompat.EditText"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_id_password"/>
    <EditText
        android:theme="@style/Widget.AppCompat.EditText"
        android:id="@+id/nombre"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_id_nombre"/>
    <EditText
        android:theme="@style/Widget.AppCompat.EditText"
        android:id="@+id/apellidos"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_id_apellidos"
        />

<Spinner
    android:theme="@style/Widget.AppCompat.Spinner"
    android:id="@+id/sexo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></Spinner>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btn_registry"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:clickable="true"
            android:text="@string/btn_registry"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:clickable="true"
            android:text="@string/btn_cancelar"/>
    </LinearLayout>
</LinearLayout>