<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="horizontal"
    tools:context="tk.theunigame.unigame.app.presentacion.controlador.impl.MainActivity">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.15"></RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.1"></RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_gravity="center"
                android:layout_margin="5dip"
                android:layout_weight="0.2"
                android:src="@drawable/ug_250px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <Button
                    android:id="@+id/individual_mode"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.2"
                    android:background="@drawable/button_design"
                    android:clickable="true"
                    android:text="@string/individual_mode"
                    android:textColor="@color/black_overlay" />

                <Button
                    android:id="@+id/tournament_mode"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.2"
                    android:background="@drawable/button_design"
                    android:clickable="true"
                    android:text="@string/tournament_mode"
                    android:textColor="@color/black_overlay" />

                <Button
                    android:id="@+id/download_questions"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.2"
                    android:background="@drawable/button_design"
                    android:clickable="true"
                    android:text="@string/download_questions"
                    android:textColor="@color/black_overlay" />

                <Button
                    android:id="@+id/use_questions"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.2"
                    android:background="@drawable/button_design"
                    android:clickable="true"
                    android:text="@string/use_questions"
                    android:textColor="@color/black_overlay" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.10"></RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"></RelativeLayout>

</LinearLayout>
