<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ll_main_horizontal"
    tools:context=".app.presentacion.controlador.impl.BajarDB">

    <RelativeLayout
        style="@style/rl_main_left">
    </RelativeLayout>
    <RelativeLayout
        style="@style/rl_main_central">
        <LinearLayout
            style="@style/ll_main_central_vertical">
            <RelativeLayout
                style="@style/rl_main_top">
            </RelativeLayout>
            <ImageView
                android:id="@+id/imageView"
                style="@style/img_main_logo"/>
            <LinearLayout
                android:orientation="vertical"
                style="@style/ll_main_container">
                <EditText
                    android:id="@+id/etxt_tags_pregunta"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:hint="@string/etxt_tags_preguntas"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <EditText
                    android:id="@+id/etxt_university"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/etxt_university"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <EditText
                    android:id="@+id/etxt_carrer"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/etxt_carrer"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <EditText
                    android:id="@+id/etxt_subject"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:hint="@string/etxt_subject"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="0.18"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"></RelativeLayout>
                    <Button
                        android:id="@+id/use_questions"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/btn_browse"
                        android:textColor="@color/black_overlay"
                        android:background="@drawable/btn_blue_dessign"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_margin="5dip"
                        android:onClick="Buscar_BD"
                        />
                    <RelativeLayout
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"></RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                style="@style/rl_main_bottom">
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        style="@style/rl_main_right">
    </RelativeLayout>
</LinearLayout>
