<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    android:orientation="horizontal"
    tools:context=".app.presentacion.controlador.impl.CrearDB">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.1">
            </RelativeLayout>
            <ImageView
                android:layout_margin="5dip"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:id="@+id/imageView"
                android:src="@drawable/ug_250px"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.8"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/etxt_university"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/etxt_university"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <EditText
                    android:id="@+id/etxt_carrer"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/etxt_carrer"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <EditText
                    android:id="@+id/etxt_subject"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:hint="@string/etxt_subject"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <EditText
                    android:id="@+id/etxt_name_db"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:hint="@string/etxt_name_db"
                    android:ellipsize="end"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:background="@drawable/etxt_background"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
                <Button
                    android:id="@+id/use_questions"
                    android:layout_width="80sp"
                    android:layout_height="0dip"
                    android:text="@string/btn_create"
                    android:textColor="@color/black_overlay"
                    android:background="@drawable/btn_blue_dessign"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:layout_margin="5dip"
                    android:layout_weight="0.16"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.10">
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15">
    </RelativeLayout>

</LinearLayout>
